<resources>
    <string name="app_name">MovieDB</string>
    <string name="home">Home</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="now_playing">Now Playing</string>
    <string name="all">All</string>
    <string name="up_coming">Upcoming</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="over_view">
        Queen Ramonda, Shuri, M’Baku, Okoye and the Dora Milaje fight to protect their nation from intervening world powers in the wake of King T’Challa’s death
    </string>
    <string name="reviews">Reviews</string>
    <string name="search_movies">Search movies</string>
</resources>