<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical"
        tools:context=".ui.fragments.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/ic_menu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/home"
                        android:textAppearance="@style/homeCategoryName" />

                    <ImageView
                        android:id="@+id/btn_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="15dp"
                        android:src="@drawable/ic_search" />
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popular"
                        android:textAppearance="@style/homeCategoryName" />

                    <TextView
                        android:id="@+id/btn_all_popular"
                        android:layout_width="55dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/rounded_btn_all_bg"
                        android:gravity="center"
                        android:text="@string/all"
                        android:textAppearance="@style/buttonAll" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_preview_popular_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/top_rated"
                        android:textAppearance="@style/homeCategoryName" />

                    <TextView
                        android:id="@+id/btn_all_top_rated"
                        android:layout_width="55dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/rounded_btn_all_bg"
                        android:gravity="center"
                        android:text="@string/all"
                        android:textAppearance="@style/buttonAll" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_preview_top_rated_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/up_coming"
                        android:textAppearance="@style/homeCategoryName" />

                    <TextView
                        android:id="@+id/btn_all_up_coming"
                        android:layout_width="55dp"
                        android:layout_height="35dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="-1dp"
                        android:background="@drawable/rounded_btn_all_bg"
                        android:gravity="center"
                        android:text="@string/all"
                        android:textAppearance="@style/buttonAll" />

                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_preview_up_coming_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>